Fixed inventory layout issue to fit with my screen

--- a/styles/scene6.css
+++ b/styles/scene6.css
@@ -200,12 +200,12 @@ body {
 progress {
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    line-height: 1.8;
+    line-height: 2.5;
     width: 16%;
     height: 4%;
     position: fixed;
     right: 3%;
-    bottom: 75px;
+    bottom: 95px;
 }
 
 progress:after {
